# auditor

./: CHANGELOG.md  README.md  extension.js  test-file.md
extension/: README.md  extension.js  package.json
extension/src/: comments.js  extension.js  linereviews.js
service/: .gitignore  Cargo.toml  template-config.toml
service/src/: config.rs  db.rs  errors.rs  git.rs  lib.rs  main.rs
web/: .gitignore  Cargo.toml  index.html
web/src/: app.rs  data.rs  lib.rs  main.rs
web/style/: output.css
