[package]
name = "auditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.17.1"
uuid = {version = "1.3.3", features = ["v4", "fast-rng"]}
tower-http = {version = "0.4.0", features = ["trace"] }
hyper = "0.14.26"
