[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.3", features = [
  "serde",
  "csr",
] }
leptos_meta = { version = "0.2", features = ["csr"] }
leptos_router = { version = "0.2", features = ["csr"]  }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }


# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }

# http = "0.2"
serde_json = "1.0.68"
bitflags = "1.2.1"
